# robotics-smells-analysis-RoboCup2012

./: Makefile  Makefile.am  aclocal.m4  config.status  configure  configure.ac
.svn/: entries  (+1 more)
src/: Makefile  Makefile.am  Makefile.in  bhv_GEAR_shoot.cpp  bhv_GEAR_shoot.h  bhv_attacker_offensive_move.cpp  bhv_attacker_offensive_move.h  bhv_basic_defensive_kick.cpp  bhv_basic_defensive_kick.h  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_basic_offensive_kick.h  bhv_basic_tackle.cpp  bhv_block_ball_owner.cpp  bhv_block_ball_owner.h  bhv_block_dribble.cpp  bhv_block_dribble.h  bhv_block_side_attack.cpp  bhv_block_side_attack.h  bhv_breakaway_through_pass.cpp  bhv_breakaway_through_pass.h  bhv_center_back_danger_move.cpp  bhv_center_back_danger_move.h  bhv_center_back_defensive_move.cpp  bhv_center_back_defensive_move.h  bhv_center_back_stopper_move.cpp  bhv_center_back_stopper_move.h  bhv_cross.cpp  bhv_cross.h  bhv_danger_area_tackle.cpp  bhv_danger_area_tackle.h  bhv_defender_basic_block_move.cpp  bhv_defender_basic_block_move.h  bhv_defender_get_ball.cpp  bhv_defender_get_ball.h  bhv_defensive_half_danger_move.cpp  bhv_defensive_half_danger_move.h  bhv_defensive_half_defensive_move.cpp  bhv_defensive_half_defensive_move.h  (+247 more)
src/formations-gear-dt/.svn/: all-wcprops  entries
src/formations-gear-dt/4231_hardcore/: before-kick-off.conf  goal-kick-opp.conf  goal-kick-our.conf  normal-formation.conf  offense-formation.conf
src/formations-gear-dt/4231_hardcore/.svn/: all-wcprops  entries
src/formations-gear-dt/4231_hardcore/.svn/text-base/: before-kick-off.conf.svn-base  defense-formation.conf.svn-base  goalie-catch-opp.conf.svn-base  goalie-catch-our.conf.svn-base  goalie-formation.conf.svn-base  indirect-freekick-opp-formation.conf.svn-base  indirect-freekick-our-formation.conf.svn-base  kickin-our-formation.conf.svn-base  setplay-opp-formation.conf.svn-base  setplay-our-formation.conf.svn-base
src/formations-gear-dt/4231_light/: before-kick-off.conf  defense-formation.conf  goal-kick-opp.conf  goal-kick-our.conf  goalie-catch-our.conf  goalie-formation.conf  kickin-our-formation.conf  setplay-opp-formation.conf  setplay-our-formation.conf
src/formations-gear-dt/4231_light/.svn/: all-wcprops  entries
src/formations-gear-dt/4231_light/.svn/text-base/: before-kick-off.conf.svn-base  goalie-catch-opp.conf.svn-base  indirect-freekick-opp-formation.conf.svn-base  indirect-freekick-our-formation.conf.svn-base  normal-formation.conf.svn-base  offense-formation.conf.svn-base
src/formations-gear-dt/4231_normal/: before-kick-off.conf  defense-formation.conf  goal-kick-opp.conf  goalie-catch-our.conf  goalie-formation.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  kickin-our-formation.conf  normal-formation.conf  setplay-opp-formation.conf
src/formations-gear-dt/4231_normal/.svn/: all-wcprops  entries
src/formations-gear-dt/4231_normal/.svn/text-base/: before-kick-off.conf.svn-base  goal-kick-our.conf.svn-base  goalie-catch-opp.conf.svn-base  offense-formation.conf.svn-base  setplay-our-formation.conf.svn-base
src/formations-gear-dt/433_hardcore/: before-kick-off.conf  goal-kick-opp.conf  goal-kick-our.conf  goalie-catch-our.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  setplay-opp-formation.conf
src/formations-gear-dt/433_hardcore/.svn/: all-wcprops  entries
src/formations-gear-dt/433_hardcore/.svn/text-base/: before-kick-off.conf.svn-base  defense-formation.conf.svn-base  goalie-catch-opp.conf.svn-base  goalie-formation.conf.svn-base  kickin-our-formation.conf.svn-base  normal-formation.conf.svn-base  offense-formation.conf.svn-base  setplay-our-formation.conf.svn-base
src/formations-gear-dt/433_light/: before-kick-off.conf  defense-formation.conf  goal-kick-opp.conf  goal-kick-our.conf  goalie-catch-opp.conf  indirect-freekick-our-formation.conf  normal-formation.conf  setplay-opp-formation.conf  setplay-our-formation.conf
src/formations-gear-dt/433_light/.svn/: all-wcprops  entries
src/formations-gear-dt/433_light/.svn/text-base/: before-kick-off.conf.svn-base  goalie-catch-our.conf.svn-base  goalie-formation.conf.svn-base  indirect-freekick-opp-formation.conf.svn-base  kickin-our-formation.conf.svn-base  (+1 more)
src/formations-gear-dt/433_normal/: before-kick-off.conf  goalie-formation.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  normal-formation.conf
src/formations-gear-dt/433_normal/.svn/: all-wcprops  entries
src/formations-gear-dt/442_hardcore/: before-kick-off.conf  defense-formation.conf  indirect-freekick-opp-formation.conf  kickin-our-formation.conf  normal-formation.conf  setplay-our-formation.conf
src/formations-gear-dt/442_hardcore/.svn/: all-wcprops  entries
src/formations-gear-dt/442_light/: before-kick-off.conf  goal-kick-our.conf  goalie-catch-opp.conf  goalie-formation.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  kickin-our-formation.conf  setplay-opp-formation.conf
src/formations-gear-dt/442_light/.svn/: all-wcprops  entries
src/formations-gear-dt/442_normal/: before-kick-off.conf  defense-formation.conf  goal-kick-opp.conf  goal-kick-our.conf  goalie-formation.conf  indirect-freekick-opp-formation.conf  indirect-freekick-our-formation.conf  kickin-our-formation.conf  offense-formation.conf  setplay-opp-formation.conf  setplay-our-formation.conf
src/formations-gear-dt/442_normal/.svn/: all-wcprops  entries
src/formations-gear-dt/442_swarm/: defense-formation.conf  goal-kick-opp.conf  goal-kick-our.conf  goalie-formation.conf  kickin-our-formation.conf  normal-formation.conf  offense-formation.conf  setplay-our-formation.conf
src/formations-gear-dt/442_swarm/.svn/: all-wcprops  entries
src/formations-gear-dt/sweeper/: before-kick-off.conf  defense-formation.conf  goal-kick-opp.conf  goalie-catch-opp.conf  goalie-catch-our.conf  goalie-formation.conf  kickin-our-formation.conf  setplay-our-formation.conf
src/formations-gear-dt/sweeper/.svn/: all-wcprops  entries
(+75 files in other folders)
