## Process this file with automake to produce Makefile.in

PLAYERSOURCES = \
	body_advance_ball_test.cpp \
	body_clear_ball2008.cpp \
	body_clear_ball_test.cpp \
	bhv_attacker_offensive_move.cpp \
	bhv_basic_defensive_kick.cpp \
	bhv_basic_move.cpp \
	bhv_basic_offensive_kick.cpp \
	bhv_basic_tackle.cpp \
	bhv_block_dribble.cpp \
	bhv_block_ball_owner.cpp \
	bhv_block_side_attack.cpp \
	bhv_breakaway_through_pass.cpp \
	bhv_center_back_danger_move.cpp \
	bhv_center_back_defensive_move.cpp \
	bhv_center_back_stopper_move.cpp \
	bhv_cross.cpp \
	bhv_danger_area_tackle.cpp \
	bhv_defender_basic_block_move.cpp \
	bhv_defender_get_ball.cpp \
	bhv_defensive_half_danger_move.cpp \
	bhv_defensive_half_defensive_move.cpp \
	bhv_deflecting_tackle.cpp \
	bhv_find_ball.cpp \
	bhv_find_player.cpp \
	bhv_get_ball.cpp \
	bhv_go_to_static_ball.cpp \
	bhv_goalie_basic_move.cpp \
	bhv_goalie_chase_ball.cpp \
	bhv_goalie_free_kick.cpp \
	bhv_keep_shoot_chance.cpp \
	bhv_line_defense.cpp \
	bhv_mark_close_opponent.cpp \
	bhv_mark_pass_line.cpp \
	bhv_offensive_half_defensive_move.cpp \
	bhv_offensive_half_offensive_move.cpp \
	bhv_pass_kick_find_receiver.cpp \
	bhv_pass_test.cpp \
	bhv_pre_process.cpp \
	bhv_prepare_set_play_kick.cpp \
	bhv_press.cpp \
	bhv_savior.cpp \
	bhv_savior_chase_ball.cpp \
	bhv_self_pass.cpp \
	bhv_set_play.cpp \
	bhv_set_play_free_kick.cpp \
	bhv_set_play_goal_kick.cpp \
	bhv_set_play_kick_in.cpp \
	bhv_set_play_indirect_free_kick.cpp \
	bhv_set_play_kick_off.cpp \
	bhv_shoot2009.cpp \
	bhv_side_back_cross_block_move.cpp \
	bhv_side_back_danger_move.cpp \
	bhv_side_back_defensive_move.cpp \
	bhv_side_back_stopper_move.cpp \
	bhv_their_goal_kick_move.cpp \
	bhv_penalty_kick.cpp \
	bhv_fs_clear_ball.cpp \
	bhv_fs_shoot.cpp \
	bhv_nutmeg_kick.cpp \
	bhv_fs_through_pass_move.cpp \
	bhv_fs_through_pass_kick.cpp \
	bhv_fs_mark_opponent_forward.cpp \
	body_force_shoot.cpp \
	body_forestall_block.cpp \
	body_go_to_point2008.cpp \
	body_hold_ball2008.cpp \
	body_kick_to_corner.cpp \
	body_kick_to_front_space.cpp \
	body_shoot.cpp \
	body_smart_kick.cpp \
	gear_player.cpp \
	intention_receive.cpp \
	kick_table.cpp \
	neck_chase_ball.cpp \
	neck_default_intercept_neck.cpp \
	neck_offensive_intercept_neck.cpp \
	neck_check_ball_owner.cpp \
	neck_goalie_turn_neck.cpp \
	neck_turn_to_receiver.cpp \
	role_attacker.cpp \
	role_center_back.cpp \
	role_center_forward.cpp \
	role_center_half.cpp \
	role_defensive_half.cpp \
	role_goalie.cpp \
	role_offensive_half.cpp \
	role_sample.cpp \
	role_side_attacker.cpp \
	role_side_back.cpp \
	role_side_forward.cpp \
	role_side_half.cpp \
	defense_system.cpp \
	strategy.cpp \
	main_player.cpp \
	view_tactical.cpp \
	body_dribble2008.cpp \
	intention_dribble2008.cpp \
	body_intercept2008.cpp \
	mark_table.cpp \
	bhv_shoot2008.cpp \
	shoot_table2008.cpp \
	intercept_simulator.cpp \
	pass_course_table.cpp \
	role_HCattacker.cpp \
	role_HCcenter_back.cpp \
	role_HCcenter_forward.cpp \
	role_HCcenter_half.cpp \
	role_HCdefensive_half.cpp \
	role_HCoffensive_half.cpp \
	role_HCside_attacker.cpp \
	role_HCside_back.cpp \
	role_HCside_forward.cpp \
	role_HCside_half.cpp \
	role_Lattacker.cpp \
	role_Lcenter_back.cpp \
	role_Lcenter_forward.cpp \
	role_Lcenter_half.cpp \
	role_Ldefensive_half.cpp \
	role_Loffensive_half.cpp \
	role_Lside_attacker.cpp \
	role_Lside_back.cpp \
	role_Lside_forward.cpp \
	role_Lside_half.cpp \
	ultimaTentativa1.c \
	role_FuzzyGoalie.cpp

PLAYERHEADERS = \
	body_advance_ball_test.h \
	body_clear_ball2008.h \
	body_clear_ball_test.h \
	bhv_attacker_offensive_move.h \
	bhv_basic_defensive_kick.h \
	bhv_basic_move.h \
	bhv_basic_offensive_kick.h \
	bhv_basic_tackle.h \
	bhv_block_dribble.h \
	bhv_block_ball_owner.h \
	bhv_block_side_attack.h \
	bhv_breakaway_through_pass.h \
	bhv_center_back_danger_move.h \
	bhv_center_back_defensive_move.h \
	bhv_center_back_stopper_move.h \
	bhv_cross.h \
	bhv_danger_area_tackle.h \
	bhv_defender_basic_block_move.h \
	bhv_defender_get_ball.h \
	bhv_defensive_half_danger_move.h \
	bhv_defensive_half_defensive_move.h \
	bhv_deflecting_tackle.h \
	bhv_find_ball.h \
	bhv_find_player.h \
	bhv_get_ball.h \
	bhv_go_to_static_ball.h \
	bhv_goalie_basic_move.h \
	bhv_goalie_chase_ball.h \
	bhv_goalie_free_kick.h \
	bhv_shoot2009.h \
	bhv_keep_shoot_chance.h \
	bhv_line_defense.h \
	bhv_mark_close_opponent.h \
	bhv_mark_pass_line.h \
	bhv_offensive_half_defensive_move.h \
	bhv_offensive_half_offensive_move.h \
	bhv_pass_kick_find_receiver.h \
	bhv_pass_test.h \
	bhv_pre_process.h \
	bhv_prepare_set_play_kick.h \
	bhv_press.h \
	bhv_savior.h \
	bhv_savior_chase_ball.h \
	bhv_self_pass.h \
	bhv_set_play.h \
	bhv_set_play_free_kick.h \
	bhv_set_play_goal_kick.h \
	bhv_set_play_indirect_free_kick.h \
	bhv_set_play_kick_in.h \
	bhv_set_play_kick_off.h \
	bhv_side_back_cross_block_move.h \
	bhv_side_back_danger_move.h \
	bhv_side_back_defensive_move.h \
	bhv_side_back_stopper_move.h \
	bhv_their_goal_kick_move.h \
	bhv_penalty_kick.h \
	bhv_fs_clear_ball.h \
	bhv_fs_shoot.h \
	bhv_nutmeg_kick.h \
	bhv_fs_through_pass_move.h \
	bhv_fs_through_pass_kick.h \
	bhv_fs_mark_opponent_forward.h \
	body_force_shoot.h \
	body_forestall_block.h \
	body_go_to_point2008.h \
	body_hold_ball2008.h \
	body_kick_to_corner.h \
	body_kick_to_front_space.h \
	body_shoot.h \
	body_smart_kick.h \
	gear_player.h \
	intention_receive.h \
	kick_table.h \
	neck_chase_ball.h \
	neck_default_intercept_neck.h \
	neck_offensive_intercept_neck.h \
	neck_check_ball_owner.h \
	neck_goalie_turn_neck.h \
	neck_turn_to_receiver.h \
	role_side_attacker.h \
	role_attacker.h \
	role_center_back.h \
	role_center_forward.h \
	role_center_half.h \
	role_defensive_half.h \
	role_goalie.h \
	role_offensive_half.h \
	role_sample.h \
	role_side_back.h \
	role_side_forward.h \
	role_side_half.h \
	soccer_role.h \
	defense_system.h \
	strategy.h \
	view_tactical.h \
	body_dribble2008.h \
	intention_dribble2008.h \
	body_intercept2008.h \
	bhv_shoot2008.h \
	shoot_table2008.h \
	mark_table.h \
	player_evaluator.h \
	intercept_simulator.h \
	pass_course_table.h \
	world_model_ext.h \
	swarm.h \
	role_HCattacker.h \
	role_HCcenter_back.h \
	role_HCcenter_forward.h \
	role_HCcenter_half.h \
	role_HCdefensive_half.h \
	role_HCoffensive_half.h \
	role_HCside_attacker.h \
	role_HCside_back.h \
	role_HCside_forward.h \
	role_HCside_half.h \
	role_Lattacker.h \
	role_Lcenter_back.h \
	role_Lcenter_forward.h \
	role_Lcenter_half.h \
	role_Ldefensive_half.h \
	role_Loffensive_half.h \
	role_Lside_attacker.h \
	role_Lside_back.h \
	role_Lside_forward.h \
	role_Lside_half.h \
	ultimaTentativa1.h \
	role_FuzzyGoalie.h

COACHSOURCES = \
	gear_coach.cpp \
	main_coach.cpp

COACHHEADERS = \
	gear_coach.h

TRAINERSOURCES = \
	gear_trainer.cpp \
	main_trainer.cpp

TRAINERHEADERS = \
	gear_trainer.h

noinst_PROGRAMS = warthog_player warthog_coach warthog_trainer

noinst_DATA = \
	start.sh.in \
	reconnect.sh.in \
	coach.conf \
	player.conf

warthog_player_SOURCES = \
	$(PLAYERSOURCES)

warthog_player_LDFLAGS =

warthog_player_LDADD =


warthog_coach_SOURCES = \
	$(COACHSOURCES)

warthog_coach_LDFLAGS =

warthog_coach_LDADD =


warthog_trainer_SOURCES = \
	$(TRAINERSOURCES)

warthog_trainer_LDFLAGS =

warthog_trainer_LDADD =

noinst_HEADERS = \
	$(PLAYERHEADERS) \
	$(COACHHEADERS) \
	$(TRAINERHEADERS)

AM_CPPFLAGS =
AM_CFLAGS = -Wall -W
AM_CXXFLAGS = -Wall -W
AM_LDLAGS =

CLEANFILES = core *~

DISTCLEANFILES = start.sh

EXTRA_DIST = $(noinst_DATA) \
	start-debug.sh \
	start-offline.sh
